[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Haron1248 <natn0367@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"

[tool.poetry.group.dev.dependencies]
mangum = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
